# lab4_Azizbek_Abduraximboyev

./: CMakeLists.txt  functions.cpp  lab10.cpp  lab11.cpp  lab12.cpp  lab13.cpp  lab14.cpp  lab5.cpp  lab6.cpp  lab6problems.cpp  lab7.cpp  lab9.cpp  main.cpp
