cmake_minimum_required(VERSION 3.30)
project(lab4)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab4 main.cpp)
add_executable(lab5 lab5.cpp)
add_executable(lab6problems lab6problems.cpp)
add_executable(lab7 lab7.cpp
        lab7.cpp)
add_executable(functions functions.cpp)
add_executable(lab9 lab9.cpp)
add_executable(lab10 lab10.cpp)
add_executable(lab11 lab11.cpp)
add_executable(lab12 lab12.cpp)
